--- a/modulo_1/laboratorio_extra/styles.css
+++ b/modulo_1/laboratorio_extra/styles.css
@@ -112,18 +112,19 @@ nav ul li:hover span {
 }
 
 main {
+  display: flex;
+  justify-content: center;
   background-color: var(--secondary-color-light);
   padding: 2rem;
   width: 100%;
 }
 
 .list {
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
   gap: 1rem;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .card.item {
@@ -135,8 +136,8 @@ main {
   padding: 1rem;
   background-color: var(--secondary-color);
   border-radius: 5px;
-  max-width: 220px;
   width: 100%;
+  max-width: 240px;
   justify-self: center;
 }
 
@@ -185,5 +186,21 @@ footer {
 
   .toolbar {
     display: none;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .card.item {
+    width: 90%;
+    max-width: none;
+    justify-content: flex-start;
+    flex-direction: row;
   }
 }
