--- a/modulo_1/laboratorio_basico/ejercicio2/mystyle.scss
+++ b/modulo_1/laboratorio_basico/ejercicio2/mystyle.scss
@@ -20,9 +20,10 @@ $secondary-font-B: "Open Sans", sans-serif;
 $box-shadow-B: 5px 5px 5px 0 rgba(0, 0, 0, 0.5);
 $border-radius-B: 4px;
 
-main{
+.temas-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  margin-top: 4rem;
 }
 
 .box{
